--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<title>Document</title>
 </head>
 <body>
+<div class="header">
+<h1>Logo</h1>
+</div>
 	
 	this is new line
 	this line is added on Github
